# zerde-serverless-bot

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: deploy.yml  pr_check.yml
dev/: examples.py
dev/example_updates/: new_chat_members.py  voteban.py
dev/scrapers/: import_questions.py
dev/update_scripts/: updates_2024-04-02.py  updates_2026-04-02.py  updates_2026-04-05.py  updates_2026-04-06.py  updates_2026-04-10.py
docs/: LOCAL_TESTING.md  README_kk.md  README_ru.md
infra/: __init__.py  app.py  cdk.json  requirements.txt  stack.py
infra/components/: __init__.py  bot.py  constants.py  messaging.py  news.py  observability.py  quiz.py  zerde_layer.py
scripts/: setup_oidc.sh  setup_webhook.sh
src/bot/: __init__.py  app.py  main.py  task_worker.py  webhook.py
src/bot/core/: __init__.py  config.py  utils.py  (+3 more)
src/news/: __init__.py  config.py  helper.py  main.py  requirements.txt
src/quiz/: main.py
src/receiver/: __init__.py  main.py  requirements.txt
src/worker/: __init__.py  main.py  requirements.txt
tests/: conftest.py  test_captcha.py  test_dispatcher.py  test_explain_enqueue.py  test_explain_multimodal.py  test_quiz_fetcher.py  test_quiz_generator.py  test_quiz_handler.py  test_quiz_streak.py  test_spam_channel_post.py  test_spam_enforcer.py  test_spam_message_text.py  test_spam_processor.py  test_spam_rule_filter.py  test_sqs_task_router.py  test_stats_ban.py  test_telegram_html.py  test_webhook.py  test_webhook_poll_answer.py
(+83 files in other folders)
