[project]
name = "Qaqpashy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aws-cdk-lib>=2.236.0",
    "aws-lambda-powertools>=3.24.0",
    "boto3>=1.42.36",
    "captcha>=0.7.1",
    "python-dotenv>=1.2.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
]
