[project]
name = "ZerdeTelegramBot"
version = "0.1.0"
description = "Zerde Telegram Bot"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aws-cdk-lib>=2.236.0",
    "python-dotenv>=1.2.1",
]

[dependency-groups]
dev = [
    "aws-lambda-powertools>=3.24.0",
    "boto3>=1.42.38",
    "pre-commit>=4.5.1",
    "requests>=2.32.5",
]
